# heterogeneous-solids

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  imgui.ini  log.txt  main.cpp
app/: App.cpp  App.h
app/exceptions/: ApplicationError.cpp  ApplicationError.h
bindings/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
command/: Command.h  CommandHistory.cpp  CommandHistory.h
command/basic/: AddObjectCommand.cpp  AddObjectCommand.h  ApplyRotationCommand.cpp  ApplyRotationCommand.h  ApplyScaleCommand.cpp  ApplyScaleCommand.h  ApplyTranslationCommand.cpp  ApplyTranslationCommand.h  ChangeMachiningParamCommand.cpp  ChangeMachiningParamCommand.h  ChangeMachiningProcessCommand.cpp  ChangeMachiningProcessCommand.h  CommandGroup.cpp  CommandGroup.h  EraseItemCommand.h  InsertItemCommand.h  MoveObjectCommand.cpp  MoveObjectCommand.h  RemoveObjectCommand.cpp  RemoveObjectCommand.h  SetCoefA0Command.cpp  SetCoefA0Command.h  SetCoefContinuityCommand.cpp  SetCoefContinuityCommand.h  SetTrimmingNodeCommand.cpp  SetTrimmingNodeCommand.h  SwapTrimmingNodeContentCommand.cpp  SwapTrimmingNodeContentCommand.h  UpdateDescriptionCommand.cpp  UpdateDescriptionCommand.h  UpdateVisibilityCommand.cpp  UpdateVisibilityCommand.h
command/examples/: SampleCommandProp.h
context/: Context.cpp  Context.h  ContextManager.cpp  ContextManager.h  Document.h  EventManager.cpp  EventManager.h  MaterialEditor.cpp  MaterialEditor.h  SceneStatus.cpp  SceneStatus.h  SceneTools.cpp  SceneTools.h  Selector.cpp  Selector.h  Snapshot.cpp  Snapshot.h
context/events/: CameraEventHandler.cpp  CameraEventHandler.h  EventHandler.h  KeyboardEventHandler.h  MouseEventHandler.h  NavigationEventHandler.cpp  NavigationEventHandler.h  SelectionEventHandler.h
heterogeneous_solids/: BezierData.h  Cell.cpp  Cell.h  HSSharedData.cpp  HSSharedData.h  HeterogeneousMaterial.cpp  HeterogeneousMaterial.h  HeterogeneousSolid.cpp  HeterogeneousSolid.h  utils.cpp  utils.h
heterogeneous_solids/coefs/: CellCoef.cpp  CellCoef.h  CellCoefGroup.cpp  CellCoefGroup.h  MaterialCoef.cpp  MaterialCoef.h  PositionCoef.cpp  PositionCoef.h  ShapeCoef.cpp  ShapeCoef.h
heterogeneous_solids/exceptions/: MachiningParamBoundsError.cpp  MachiningParamBoundsError.h
heterogeneous_solids/factories/: CellAggregator.cpp  CellAggregator.h  HeterogeneousSolidFactory.cpp  HeterogeneousSolidFactory.h
heterogeneous_solids/machining/: MachiningOperation.cpp  MachiningOperation.h  MachiningParam.cpp  MachiningParam.h
heterogeneous_solids/trimmed_cells/: IsoCurve.cpp  IsoCurve.h  IsoSurface.cpp  IsoSurface.h  TrimmedCell.cpp  TrimmedCell.h  TrimmingNode.cpp  TrimmingNode.h
io/: IO.cpp  IO.h  ModelLoader.cpp  ModelLoader.h  Resources.cpp  Resources.h
io/dialogs/: DialogsFacade.h  PFDDialogs.cpp  PFDDialogs.h  TFDDialogs.cpp  TFDDialogs.h
logging/: logging.cpp  logging.h
resources/shaders/: brdf.frag  brdf_lut.frag  brdf_lut.vert  cubemap.frag  cubemap.vert  frag_color.frag  grid_gizmo.frag  grid_gizmo.vert  ibl_equations.frag  irradiance.frag  irradiance_map.frag  lights.frag  line.vert  materials.frag  pbr.frag  pbr_equations.frag  perlin.frag  plain_color.frag  plain_color.vert  prefilter.frag  prefilter_map.frag  quad.frag  quad.vert  shaders.json  shadow_map.vert  skybox.frag  skybox.vert  surface.frag  surface.vert  vertex.vert
scene/: Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  RenderContext.cpp  RenderContext.h  RenderProfile.cpp  RenderProfile.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SelectionController.cpp  SelectionController.h  ShadowMap.cpp  ShadowMap.h
scene/drawables/: Drawable.h  Mesh.cpp  Mesh.h  NormalField.cpp  NormalField.h  Poliline.cpp  Poliline.h  Vertex.cpp  Vertex.h
scene/gizmos/: Grid.cpp  Grid.h  LightGizmo.cpp  LightGizmo.h
scene/ibl/: Builder.h  BuilderImp.cpp  BuilderImp.h  Data.h
scene/lights/: Light.cpp  Light.h  LightProps.cpp  LightProps.h  LightSet.cpp  LightSet.h  ShadowMap.cpp  ShadowMap.h
scene/objects/: GroupNode.cpp  GroupNode.h  SceneNode.cpp  SceneNode.h  SceneNodeState.cpp  SceneNodeState.h  Transform.cpp  Transform.h
serialization/: FileDocument.cpp  FileDocument.h  Serializer.h
serialization/json/: JSONSerializer.cpp  JSONSerializer.h  JSONUtils.cpp  JSONUtils.h  ObjectDeserializer.cpp  ObjectDeserializer.h  ResourceDeserializer.cpp  ResourceDeserializer.h  ResourceSerializer.cpp  ResourceSerializer.h  SaveObjectVisitor.cpp  SaveObjectVisitor.h
shaders/: Shader.cpp  Shader.h  ShaderError.cpp  ShaderError.h  ShaderIOJSON.cpp  ShaderIOJSON.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  SubroutineManager.cpp  SubroutineManager.h  Uniform.cpp  Uniform.h
ui/: components.cpp  components.h
ui/core/: ContextDialog.cpp  ContextDialog.h  ContextMenuItem.cpp  ContextMenuItem.h  ContextMenuNode.cpp  ContextMenuNode.h  ContextWindow.cpp  ContextWindow.h  Dialog.cpp  Dialog.h  DialogManager.cpp  DialogManager.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MenuNode.h  SelectMenuNode.cpp  SelectMenuNode.h  StatefulDialog.h  UI.cpp  UI.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
ui/dialogs/: AddCellsDialog.cpp  AddCellsDialog.h  AddLightDialog.cpp  AddLightDialog.h  MessageDialog.cpp  MessageDialog.h
ui/menus/: EditMenu.cpp  EditMenu.h  SelectionMenu.cpp  SelectionMenu.h  ToggleWindowsMenu.cpp  ToggleWindowsMenu.h
ui/windows/: CameraWindow.cpp  CameraWindow.h  CellWindow.cpp  CellWindow.h  CommandHistoryWindow.cpp  CommandHistoryWindow.h  LightsWindow.cpp  LightsWindow.h  LoggingWindow.cpp  LoggingWindow.h  MaterialsWindow.cpp  MaterialsWindow.h  ObjectWindow.cpp  ObjectWindow.h  ProfilerWindow.cpp  ProfilerWindow.h  RenderProcessWindow.cpp  RenderProcessWindow.h  SceneWindow.cpp  SceneWindow.h  ShadersWindow.cpp  ShadersWindow.h  SnapshotWindow.cpp  SnapshotWindow.h  TransformWindow.cpp  TransformWindow.h  (+5 more)
utils/: Decorator.h  ItemSet.h  MapCache.h  NodeVisitor.h  Observer.h  Resolution.h  Vec3Hash.h  props.cpp  props.h  vector.h
(+29 files in other folders)
