cmake_minimum_required(VERSION 3.5)
project(heterogeneous_solids)

set(CMAKE_CXX_STANDARD 17)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/portable-file-dialogs)

find_package(GLEW REQUIRED)
find_package(glfw3 REQUIRED)
find_package(imgui REQUIRED)
find_package(glm REQUIRED)
find_package(lodepng REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(spdlog REQUIRED)
find_package(assimp REQUIRED)
find_package(stb REQUIRED)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/ImGuizmo)

add_executable(heterogeneous_solids
        bindings/imgui_impl_glfw.cpp
        bindings/imgui_impl_glfw.h
        bindings/imgui_impl_opengl3.cpp
        bindings/imgui_impl_opengl3.h
        bindings/imgui_impl_opengl3.cpp
        bindings/imgui_impl_opengl3.h
        bindings/imgui_impl_opengl3_loader.h
        bindings/IconsMaterialDesign.h

        main.cpp
        ui/core/UI.cpp
        ui/core/UI.h
        ui/core/WindowManager.cpp
        ui/core/WindowManager.h
        app/App.cpp
        app/App.h
        ui/core/Window.cpp
        ui/core/Window.h
        ui/core/Menu.cpp
        ui/core/Menu.h
        ui/core/MenuItem.cpp
        ui/core/MenuItem.h
        ui/core/MenuNode.h
        ui/windows/SceneWindow.cpp
        ui/windows/SceneWindow.h
        scene/FrameBuffer.cpp
        scene/FrameBuffer.h
        context/Context.cpp
        context/Context.h
        context/ContextManager.cpp
        context/ContextManager.h
        ui/core/ContextWindow.cpp
        ui/core/ContextWindow.h
        scene/Scene.cpp
        scene/Scene.h
        scene/Camera.cpp
        scene/Camera.h
        scene/objects/SceneNode.cpp
        scene/objects/SceneNode.h
        scene/objects/GroupNode.cpp
        scene/objects/GroupNode.h
        scene/objects/Transform.cpp
        scene/objects/Transform.h
        scene/drawables/Mesh.cpp
        scene/drawables/Mesh.h
        shaders/Shader.cpp
        shaders/Shader.h
        shaders/ShaderProgram.cpp
        shaders/ShaderProgram.h
        shaders/Uniform.h
        shaders/Uniform.cpp
        scene/RenderContext.cpp
        scene/RenderContext.h
        ui/windows/CameraWindow.cpp
        ui/windows/CameraWindow.h
        shaders/SubroutineManager.cpp
        shaders/SubroutineManager.h
        io/dialogs/DialogsFacade.h
        io/dialogs/PFDDialogs.cpp
        io/dialogs/PFDDialogs.h
        scene/lights/Light.cpp
        scene/lights/Light.h
        ui/windows/LightsWindow.cpp
        ui/windows/LightsWindow.h
        ui/windows/RenderProcessWindow.cpp
        ui/windows/RenderProcessWindow.h
        scene/Renderer.cpp
        scene/Renderer.h
        heterogeneous_solids/HeterogeneousSolid.cpp
        heterogeneous_solids/HeterogeneousSolid.h
        scene/Material.cpp
        scene/Material.h
        scene/lights/LightSet.cpp
        scene/lights/LightSet.h
        scene/lights/LightProps.cpp
        scene/lights/LightProps.h
        ui/windows/TreeViewWindow.cpp
        ui/windows/TreeViewWindow.h
        context/events/EventHandler.h
        context/events/MouseEventHandler.h
        context/events/CameraEventHandler.cpp
        context/events/CameraEventHandler.h
        heterogeneous_solids/BezierData.h
        heterogeneous_solids/coefs/ShapeCoef.cpp
        heterogeneous_solids/coefs/ShapeCoef.h
        heterogeneous_solids/Cell.cpp
        heterogeneous_solids/Cell.h
        heterogeneous_solids/trimmed_cells/TrimmedCell.cpp
        heterogeneous_solids/trimmed_cells/TrimmedCell.h
        heterogeneous_solids/trimmed_cells/IsoCurve.cpp
        heterogeneous_solids/trimmed_cells/IsoCurve.h
        heterogeneous_solids/utils.cpp
        heterogeneous_solids/utils.h
        heterogeneous_solids/trimmed_cells/IsoSurface.cpp
        heterogeneous_solids/trimmed_cells/IsoSurface.h
        scene/drawables/Poliline.cpp
        scene/drawables/Poliline.h
        scene/drawables/NormalField.cpp
        scene/drawables/NormalField.h
        shaders/ShaderManager.cpp
        shaders/ShaderManager.h
        utils/MapCache.h
        scene/gizmos/Grid.cpp
        scene/gizmos/Grid.h
        scene/RenderProfile.cpp
        scene/RenderProfile.h
        heterogeneous_solids/factories/CellAggregator.cpp
        heterogeneous_solids/factories/CellAggregator.h
        heterogeneous_solids/factories/HeterogeneousSolidFactory.cpp
        heterogeneous_solids/factories/HeterogeneousSolidFactory.h
        utils/NodeVisitor.h
        third_party/tinyfiledialogs/tinyfiledialogs.cpp
        third_party/tinyfiledialogs/tinyfiledialogs.h
        io/dialogs/TFDDialogs.cpp
        io/dialogs/TFDDialogs.h
        context/events/KeyboardEventHandler.h
        ui/windows/ObjectWindow.cpp
        ui/windows/ObjectWindow.h
        ui/core/ContextMenuNode.cpp
        ui/core/ContextMenuNode.h
        ui/core/SelectMenuNode.cpp
        ui/core/SelectMenuNode.h
        scene/gizmos/LightGizmo.cpp
        scene/gizmos/LightGizmo.h
        ui/windows/constants.h
        heterogeneous_solids/machining/processes/MachiningProcess.h
        heterogeneous_solids/machining/processes/MachiningProcessCut.cpp
        heterogeneous_solids/machining/processes/MachiningProcessCut.h
        heterogeneous_solids/machining/MachiningOperation.cpp
        heterogeneous_solids/machining/MachiningOperation.h
        heterogeneous_solids/machining/processes/MachiningProcessNone.cpp
        heterogeneous_solids/machining/processes/MachiningProcessNone.h
        heterogeneous_solids/machining/processes/MachiningProcess3ZoneSplit.cpp
        heterogeneous_solids/machining/processes/MachiningProcess3ZoneSplit.h
        heterogeneous_solids/machining/processes/MachiningProcessSplit.cpp
        heterogeneous_solids/machining/processes/MachiningProcessSplit.h
        heterogeneous_solids/HSSharedData.cpp
        heterogeneous_solids/HSSharedData.h
        ui/core/Dialog.cpp
        ui/core/Dialog.h
        ui/core/DialogManager.cpp
        ui/core/DialogManager.h
        ui/core/ContextDialog.cpp
        ui/core/ContextDialog.h
        ui/dialogs/AddLightDialog.cpp
        ui/dialogs/AddLightDialog.h
        ui/components.cpp
        ui/components.h
        scene/objects/SceneNodeState.cpp
        scene/objects/SceneNodeState.h
        heterogeneous_solids/trimmed_cells/TrimmingNode.cpp
        heterogeneous_solids/trimmed_cells/TrimmingNode.h
        heterogeneous_solids/machining/MachiningParam.cpp
        heterogeneous_solids/machining/MachiningParam.h
        heterogeneous_solids/machining/processes/MachiningProcessHole.cpp
        heterogeneous_solids/machining/processes/MachiningProcessHole.h
        heterogeneous_solids/machining/processes/MachiningProcessTaper.cpp
        heterogeneous_solids/machining/processes/MachiningProcessTaper.h
        ui/menus/SelectionMenu.cpp
        ui/menus/SelectionMenu.h
        ui/core/StatefulDialog.h
        heterogeneous_solids/machining/processes/MachiningProcessSmoothStep.cpp
        heterogeneous_solids/machining/processes/MachiningProcessSmoothStep.h
        heterogeneous_solids/machining/processes/MachiningProcessHoleRing.cpp
        heterogeneous_solids/machining/processes/MachiningProcessHoleRing.h
        heterogeneous_solids/machining/processes/MachiningProcessQuarterTube.cpp
        heterogeneous_solids/machining/processes/MachiningProcessQuarterTube.h
        ui/dialogs/AddCellsDialog.cpp
        ui/dialogs/AddCellsDialog.h
        scene/SelectionController.cpp
        scene/SelectionController.h
        utils/Vec3Hash.h
        context/events/SelectionEventHandler.h
        utils/Decorator.h
        command/CommandHistory.h
        command/Command.h
        ui/windows/CommandHistoryWindow.cpp
        ui/windows/CommandHistoryWindow.h
        command/CommandHistory.cpp
        command/examples/SampleCommandProp.h
        context/EventManager.cpp
        context/EventManager.h
        context/events/NavigationEventHandler.cpp
        context/events/NavigationEventHandler.h
        command/basic/AddObjectCommand.cpp
        command/basic/AddObjectCommand.h
        command/basic/RemoveObjectCommand.cpp
        command/basic/RemoveObjectCommand.h
        heterogeneous_solids/machining/processes/MachiningProcessGearTeeth.cpp
        heterogeneous_solids/machining/processes/MachiningProcessGearTeeth.h
        ui/windows/SnapshotWindow.cpp
        ui/windows/SnapshotWindow.h
        utils/Resolution.h
        context/Snapshot.cpp
        context/Snapshot.h
        ui/dialogs/MessageDialog.cpp
        ui/dialogs/MessageDialog.h
        scene/drawables/Vertex.cpp
        scene/drawables/Vertex.h
        scene/drawables/Drawable.h
        heterogeneous_solids/exceptions/MachiningParamBoundsError.cpp
        heterogeneous_solids/exceptions/MachiningParamBoundsError.h
        utils/vector.h
        command/basic/CommandGroup.cpp
        command/basic/CommandGroup.h
        command/basic/ChangeMachiningProcessCommand.cpp
        command/basic/ChangeMachiningProcessCommand.h
        command/basic/ChangeMachiningParamCommand.cpp
        command/basic/ChangeMachiningParamCommand.h
        heterogeneous_solids/machining/processes/MachiningProcessRotation.cpp
        heterogeneous_solids/machining/processes/MachiningProcessRotation.h
        heterogeneous_solids/machining/processes/MachiningProcessRoundedEdge.cpp
        heterogeneous_solids/machining/processes/MachiningProcessRoundedEdge.h
        heterogeneous_solids/machining/processes/MachiningProcessRoundedEdgeRing.cpp
        heterogeneous_solids/machining/processes/MachiningProcessRoundedEdgeRing.h
        command/basic/SetTrimmingNodeCommand.cpp
        command/basic/SetTrimmingNodeCommand.h
        ui/windows/ProfilerWindow.cpp
        ui/windows/ProfilerWindow.h
        heterogeneous_solids/HeterogeneousMaterial.cpp
        heterogeneous_solids/HeterogeneousMaterial.h
        ui/windows/MaterialsWindow.cpp
        ui/windows/MaterialsWindow.h
        context/MaterialEditor.cpp
        context/MaterialEditor.h
        utils/ItemSet.h
        command/basic/InsertItemCommand.h
        command/basic/EraseItemCommand.h
        serialization/Serializer.h
        serialization/json/JSONSerializer.cpp
        serialization/json/JSONSerializer.h
        serialization/json/SaveObjectVisitor.cpp
        serialization/json/SaveObjectVisitor.h
        serialization/json/JSONUtils.cpp
        serialization/json/JSONUtils.h
        app/exceptions/ApplicationError.cpp
        app/exceptions/ApplicationError.h
        context/Document.h
        serialization/FileDocument.cpp
        serialization/FileDocument.h
        serialization/json/ObjectDeserializer.cpp
        serialization/json/ObjectDeserializer.h
        ui/windows/LoggingWindow.cpp
        ui/windows/LoggingWindow.h
        logging/logging.cpp
        logging/logging.h
        ui/windows/ShadersWindow.cpp
        ui/windows/ShadersWindow.h
        shaders/ShaderIOJSON.cpp
        shaders/ShaderIOJSON.h
        shaders/ShaderError.cpp
        shaders/ShaderError.h
        context/SceneStatus.cpp
        context/SceneStatus.h
        ui/windows/TrimmingWindow.cpp
        ui/windows/TrimmingWindow.h
        serialization/json/ResourceSerializer.cpp
        serialization/json/ResourceSerializer.h
        serialization/json/ResourceDeserializer.cpp
        serialization/json/ResourceDeserializer.h
        utils/Observer.h
        ui/core/ContextMenuItem.cpp
        ui/core/ContextMenuItem.h
        ui/menus/EditMenu.cpp
        ui/menus/EditMenu.h
        ui/menus/ToggleWindowsMenu.cpp
        ui/menus/ToggleWindowsMenu.h
        context/Selector.cpp
        context/Selector.h
        ui/windows/CellWindow.cpp
        ui/windows/CellWindow.h
        io/IO.cpp
        io/IO.h
        command/basic/SwapTrimmingNodeContentCommand.cpp
        command/basic/SwapTrimmingNodeContentCommand.h
        command/basic/UpdateVisibilityCommand.cpp
        command/basic/UpdateVisibilityCommand.h
        command/basic/UpdateDescriptionCommand.cpp
        command/basic/UpdateDescriptionCommand.h
        utils/props.cpp
        utils/props.h
        command/basic/MoveObjectCommand.cpp
        command/basic/MoveObjectCommand.h
        heterogeneous_solids/coefs/CellCoefGroup.cpp
        heterogeneous_solids/coefs/CellCoefGroup.h
        heterogeneous_solids/coefs/CellCoef.cpp
        heterogeneous_solids/coefs/CellCoef.h
        io/ModelLoader.cpp
        io/ModelLoader.h
        io/Resources.cpp
        io/Resources.h
        ui/windows/TransformWindow.cpp
        ui/windows/TransformWindow.h
        context/SceneTools.cpp
        context/SceneTools.h
        command/basic/ApplyTranslationCommand.cpp
        command/basic/ApplyTranslationCommand.h
        command/basic/ApplyRotationCommand.cpp
        command/basic/ApplyRotationCommand.h
        command/basic/ApplyScaleCommand.cpp
        command/basic/ApplyScaleCommand.h
        heterogeneous_solids/machining/processes/MachiningProcessChild.cpp
        heterogeneous_solids/machining/processes/MachiningProcessChild.h
        command/basic/SetCoefA0Command.cpp
        command/basic/SetCoefA0Command.h
        heterogeneous_solids/coefs/MaterialCoef.cpp
        heterogeneous_solids/coefs/MaterialCoef.h
        heterogeneous_solids/coefs/PositionCoef.cpp
        heterogeneous_solids/coefs/PositionCoef.h
        command/basic/SetCoefContinuityCommand.cpp
        command/basic/SetCoefContinuityCommand.h
        scene/ibl/Builder.h
        scene/ibl/Data.h
        scene/ibl/BuilderImp.cpp
        scene/ibl/BuilderImp.h
        scene/ShadowMap.cpp
        scene/ShadowMap.h
)

target_compile_definitions(heterogeneous_solids PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLEW)
target_link_libraries(heterogeneous_solids GLEW::GLEW)
target_link_libraries(heterogeneous_solids glfw)
target_link_libraries(heterogeneous_solids imgui::imgui)
target_link_libraries(heterogeneous_solids glm::glm)
target_link_libraries(heterogeneous_solids lodepng::lodepng)
target_link_libraries(heterogeneous_solids nlohmann_json::nlohmann_json)
target_link_libraries(heterogeneous_solids spdlog::spdlog)
target_link_libraries(heterogeneous_solids assimp::assimp)
target_link_libraries(heterogeneous_solids ImGuizmo)
target_link_libraries(heterogeneous_solids stb::stb)